// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'karura' to 'heiko' using bridgeSDK cross-chain 'KAR' > after 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": "(rounded 8)",
  "toChain": "(rounded 102)",
}
`;

exports[`'karura' to 'heiko' using bridgeSDK cross-chain 'KAR' > fee 1`] = `"(rounded 0.07)"`;

exports[`'karura' to 'heiko' using bridgeSDK cross-chain 'KAR' > initial 1`] = `
{
  "address": "5FA9nQDVg267DEd8m1ZypXLBnvN7SFxYwV7ndqSYGiN9TTpu",
  "decimals": 12,
  "fromChain": 10,
  "toChain": 100,
}
`;
